# pivix-down

./: .gitignore  README.md  pyproject.toml
config/: config.json
src/: cli.py  pixiv_down.py
src/api/: download.py  pixiv_api.py  serach.py
src/api/config/: engine.py  loader.py  schema.py
src/api/data_analyse/: __init__.py  analyser.py
src/api/db/: __init__.py  database.py  mysql.py
src/api/parser/: __init__.py  items.py  pixiv_parser.py
src/api/utils/: headers.py  util.py
src/api/view/: view.py
src/tools/: files.py  logger.py  types.py
src/ui/: core.py  test.qml
src/ui/qml/: CoreTabBar.qml  IconButton.qml  InfoView.qml  ScrollTextEdit.qml  Search.qml  SearchBar.qml  Setting.qml  UserInfo.qml  test.qml
src/web_parser/: document_parse.py
