[tool.poetry]
name = "pixiv_down"
version = "0.1.0"
description = ""
authors = ["yxSakana <2956823347@qq.com>"]
readme = "README.md"
#packages = [
#    {include = "api", from = "src"},
#    {include = "tools", from = "src"},
#    {include = "web_parser", from = "src"},
#    {include = "ui", from = "src"}
#]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
lxml = "^5.1.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
pymysql = "^1.1.1"
pyqt5 = "^5.15.11"
ffmpeg-python = "^0.2.0"
pytest = "^8.0.0"

[tool.poetry.scripts]
pixiv_down = "cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
